--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
 
 @custom-variant dark (&:is(.dark *));
 
+body {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;       /* You can set 100–900 */
+  font-style: normal;     /* Use 'italic' if needed */
+}
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -39,6 +46,19 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+   
+
+  --color-cgray-border: #ECECEE; /* d*/
+  --color-cgray-first: #FCFCFC; /*first top gary lightest*/
+  --color-cgray-second: #FAFAFB; /* right hand side of side bar gray == second top bar*/
+  --color-cgray-focused: #FFFFFF; /* when focused on the option*/
+  --color-cgray-selected: #ECECEE; /* selected side bar option*/
+
+  --color-cgray-ntext: #5F5F6F; /*normal text gray == like in second top bar*/
+  --color-cgray-dtext: #2B2B34; /*darker text gray*/
+
+  --color-cblue-100: #5F15FE; /*normal toggle blue*/
+  --color-cblue-200: #7DA9E8; /*information blue*/
 }
 
 :root {
@@ -118,3 +138,4 @@
     @apply bg-background text-foreground;
   }
 }
+
