--- a/src/index.css
+++ b/src/index.css
@@ -207,6 +207,8 @@ html {
 
 
 
+
+
 .blue-button {
   padding: 7px 14px;
   border-radius: 8px;
@@ -440,6 +442,10 @@ canvas {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* Internet Explorer and Edge */
 }
+.show-scrollbar {
+  scrollbar-width: auto; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer and Edge */
+}
 
 .hide-scrollbar::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera */
@@ -541,5 +547,45 @@ canvas {
     to bottom,
     #3a3a3a,
     #2a2a2a
+  );
+}
+
+/* In your global CSS file */
+.text-outline {
+  text-shadow:
+    -0.5px -0.5px 0 #000,  
+     0.5px -0.5px 0 #000,
+    -0.5px  0.5px 0 #000,
+     0.5px  0.5px 0 #000;
+  color: #BAA6FF;
+}
+
+
+
+
+.start-button {
+  padding: 5px 14px;
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 14px;
+  color: #333;
+  background: linear-gradient(
+    to bottom,
+    #ffffff,     /* pure white top */
+    #f0f0f0      /* soft light gray bottom */
+  );
+  border: 1px solid #4a4a4a; /* light gray border */
+  box-shadow:
+    inset 0 1px 0 rgba(255, 255, 255, 0.6), /* inner white gloss */
+    0 1px 2px rgba(0, 0, 0, 0.05);          /* outer shadow */
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.start-button:hover {
+  background: linear-gradient(
+    to bottom,
+    #f9f9f9,
+    #e5e5e5
   );
 }
